# prediccion-temprana-anemia

./: .env  .gitignore  README.md  app.py  app_streamlit.py  label_mapping.json  main.py  model_XGBoost.joblib  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: streamlit_app.py
artifacts/: metadata.json  metrics_xgboost.json  model_xgboost_calibrated.joblib  validation_report.json
config/: settings.yaml
infra/: deploy_streamlit.md  github_action_ci.yml  supabase_schema.sql
model/: pipeline_xgboost_tuned.pkl
script/: IDL3_STD_Ramon_Giraldo.ipynb  Ramon_Giraldo.ipynb
scripts/: run_predict.py
src/: config.py  data_validation.py  evaluation.py  metrics_visualization.py  model_training.py  preprocessing.py
src/anemia_model/: io.py  predict.py
src/anemia_model_peru.egg-info/: PKG-INFO  SOURCES.txt
test/: test_predict.py
