[project]
name = "anemia-model-peru"
version = "0.1.0"
description = "Sistema predictivo para riesgo de anemia en niños - MIDIS 2025"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
